--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -42,4 +42,10 @@ body
 	max-width: 100%
 	height: auto
 
+.navigation
+  background-color: rgba(110, 110, 110, 0.73)
+
+
+
+
 @import "media" // Всегда в конце
