Test for new branch

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -44,8 +44,21 @@ body
 
 .navigation
   background-color: rgba(110, 110, 110, 0.73)
-
-
-
+  font-family: 'Arial'
+  .navigation-logo
+    font-size: 24px
+    font-weight: 800
+  .navigation-menu
+    ul
+      margin: 0
+      padding: 4px
+      li
+        display: inline
+        margin-right: 5px
+        font-size: 18px
+        a
+          color: rgba(black, .6)
+          &:hover
+            color: black
 
 @import "media" // Всегда в конце
