Update fonts, create nav-menu + mobile-version. Added libs: fontawesome, css-hamburgers, bootstrap 3.

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -15,8 +15,18 @@
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
-	/**/
 
+
+    .hamburger
+      margin-top: 12px
+      height: 56px
+      padding: 15px 10px
+    .login
+      text-align: left
+      padding-left: 10px
+      font-size: 20px
+      border-top: 1px solid #b6b6b6
+      line-height: 2.5
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
