--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,4 +1,10 @@
-@import "bourbon"
 
-+font-face("roboto", "../fonts/RobotoRegular/RobotoRegular", $file-formats: eot woff ttf)
-+font-face("roboto", "../fonts/RobotoBold/RobotoBold", bold, $file-formats: eot woff ttf)
++font-face("raleway", "../fonts/RalewayRegular/RalewayRegular")
++font-face("raleway", "../fonts/RalewayBold/RalewayBold", bold)
++font-face("raleway", "../fonts/RalewayExtraBold/RalewayExtraBold", 800)
++font-face("raleway", "../fonts/RalewayLight/RalewayLight", 300)
++font-face("raleway", "../fonts/RalewaySemiBold/RalewaySemiBold", 600)
++font-face("raleway", "../fonts/RalewayThin/RalewayThin", 100)
+
+
++font-face("firasans", "../fonts/FiraSansRegular/FiraSansRegular")
